# cuda-sample

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
main/: CMakeLists.txt
main/include/: foo.h
main/src/: main.cpp
sample/: CMakeLists.txt
sample/include/: cuda_utility.h  sample.h
sample/src/: sample.cpp  sample.cu
